화면단 작업중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 spring.thymeleaf.cache=false
+
+spring.jpa.defer-datasource-initialization=true 
+
+# resources ??? data.sql ?? ??? ??? ??
+spring.sql.init.mode=always
+
+#??? ??? ???
+spring.sql.init.encoding=UTF-8
